--- a/Phase 3/Section End Project 1 Key Log Record Creation with Node JS/package.json
+++ b/Phase 3/Section End Project 1 Key Log Record Creation with Node JS/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "read-line": "^0.1.2",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
     "sync": "^0.2.5"
   }
