--- a/Phase 3/3. Section End Project 3 Chatting With Socket IO/package.json
+++ b/Phase 3/3. Section End Project 3 Chatting With Socket IO/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatbox",
+  "name": "com",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.0",
+    "express": "^4.17.1",
     "express-ws": "^5.0.2",
+    "http": "^0.0.1-security",
     "socket.io": "^4.2.0"
   }
 }
