--- a/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/package.json
+++ b/Phase 3/5. Section End Project 5 Connecting MongoDB with the Website/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^4.1.1",
     "mongoose": "^6.0.4",
     "socket.io": "^4.2.0"
   }
